<resources>
    <string name="app_name">FisioApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lesion_y_tratamiento">LESIÓN Y TRATAMIENTO</string>
    <string name="nombre">Nombre</string>
    <string name="direccion">Dirección</string>
    <string name="guardar">Guardar</string>
    <string name="nuevo_cliente">NUEVO CLIENTE</string>
    <string name="cancelar">Cancelar</string>
    <string name="lesion_actual">Lesión actual</string>
    <string name="tratamiento_actual">Tratamiento actual</string>
    <string name="dni">Dni</string>
    <string name="usuario">Usuario</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
    <string name="bienvenido">BIENVENIDO</string>
    <string name="cuerpo_humano">Cuerpo humano</string>
    <string name="movimientos">Movimientos</string>
    <string name="ejercicios">Ejercicios</string>
    <string name="email">Email</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="password">Password</string>
    <string name="fisioapp">FISIOAPP</string>
    <string name="pistaMensaje">Enviar</string>
    <string name="volver">Volver</string>
    <string name="mis_clientes">MIS CLIENTES</string>
    <string name="enviar">Enviar</string>
    <string name="iniciar_sesion_con_google">Iniciar sesión con Google</string>
    <string name="escribe_tu_mensaje">Escribe tu mensaje...</string>
    <string name="mis_contactos">MIS CONTACTOS</string>
    <string name="buscar_por_correo">Buscar por correo...</string>
    <string name="mis_videos">MI MULTIMEDIA</string>
    <string name="siguiente">Siguiente</string>
    <string name="registrarse">Registrarse</string>
    <string name="apellidos">Apellidos</string>
    <string name="registro">Registro</string>
    <string name="contrase_a">Contraseña</string>
    <string name="correo">Correo</string>
    <string name="fecha_de_nacimiento">Fecha de nacimiento</string>
    <string name="dolor_0">Dolor: 0</string>
    <string name="eje_x">Eje X</string>
    <string name="acelerometro">Acelerometro</string>
    <string name="giroscopio">Giroscopio</string>
    <string name="mis_sensores">Mis sensores</string>
    <string name="eje_y">Eje Y</string>
    <string name="eje_z">Eje Z</string>
    <string name="especialidad">Especialidad</string>
    <string name="actualizar">Actualizar</string>
    <string name="mas_info_aqu">Más info aquí</string>
    <string name="a_adir_contactos">Añadir contactos</string>
    <string name="fisioterapeuta">Fisioterapeuta</string>
    <string name="musica_on">Musica On</string>
    <string name="musica_off">Musica Off</string>
    <string name="chat_de_fisioterapeutas">CHAT DE FISIOTERAPEUTAS</string>
    <string name="a_adir">Añadir</string>
    <string name="fisioappmain">FisioApp</string>
    <string name="chat">CHAT</string>
    <string name="tel_fono">Teléfono</string>
    <string name="correo_electr_nico">Correo electrónico</string>
    <string name="historial_m_dico">Historial Médico</string>
    <string name="informaci_n_del_paciente">Información del paciente</string>
    <string name="nombre_completo">Nombre Completo</string>
    <string name="ltimo_diagn_stico">Último diagnóstico</string>
    <string name="diagn_sticos">Diagnósticos</string>
    <string name="fecha_del_diagn_stico">Fecha del diagnóstico</string>
    <string name="fecha_de_inicio_del_tratamiento">Fecha de inicio del tratamiento</string>
    <string name="fecha_de_fin_del_tratamiento">Fecha de fin del tratamiento</string>
    <string name="observaciones_o_s_ntomas">Observaciones o síntomas</string>
    <string name="medicamentos">Medicamentos</string>
    <string name="eliminar">Eliminar</string>
    <string name="home">Home</string>
    <string name="noticias">Noticias</string>
    <string name="galer_a">Galería</string>
    <string name="ajustes">Ajustes</string>
    <string name="clientes">Clientes</string>
    <string name="cerrar_sesi_n">Cerrar Sesión</string>
    <string name="salir">Salir</string>
    <string name="chat_menulateral">Chat</string>

    <string-array name="array_especialidades">
        <item>Ninguna</item>
        <item>Neurológica</item>
        <item>Deportiva</item>
        <item>Cardiopulmonar</item>
        <item>Pediátrica</item>
        <item>Geriátrica</item>
    </string-array>

    <string-array name="array_cuerpoHumano">
        <item>SIST. ESQUELÉTICO</item>
        <item>SIST. MUSCULAR</item>
        <item>SIST. NERVIOSO</item>
    </string-array>

    <string-array name="array_movimientos">
        <item>COLUMNA VERTEBRAL</item>
        <item>MIEMBROS SUPERIORES</item>
        <item>MIEMBROS INFERIORES</item>
    </string-array>

    <string-array name="array_ejercicios">
        <item>CARDIOVASCULAR</item>
        <item>FUERZA MAXIMA</item>
        <item>HIPERTROFIA</item>
    </string-array>
</resources>
