<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:backgroundTint="#FFFFFF"
    tools:context=".ui.activities.RegisterActivity">

    <TextView
        android:id="@+id/tv_titulo_registro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="NUEVO REGISTRO"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/diviserLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/diviserLine"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@color/edit"
        android:max="100"
        android:progress="0"
        app:layout_constraintBottom_toTopOf="@+id/etNombreRegisterLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_titulo_registro" />

    <!-- TextInputLayout para Nombre -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etNombreRegisterLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toTopOf="@+id/etApellidosRegisterLayout"
        app:layout_constraintEnd_toEndOf="@+id/etApellidosRegisterLayout"
        app:layout_constraintStart_toStartOf="@+id/etApellidosRegisterLayout"
        app:layout_constraintTop_toBottomOf="@+id/diviserLine"
        app:layout_constraintVertical_bias="0.5">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etnombreRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/nombre"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- TextInputLayout para Apellidos -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etApellidosRegisterLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toTopOf="@+id/etFechaNacRegisterLayout"
        app:layout_constraintEnd_toEndOf="@+id/etFechaNacRegisterLayout"
        app:layout_constraintStart_toStartOf="@+id/etFechaNacRegisterLayout"
        app:layout_constraintTop_toBottomOf="@+id/etNombreRegisterLayout"
        app:layout_constraintVertical_bias="0.5">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etApellidosRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/apellidos"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Botón para Guardar -->
    <Button
        android:id="@+id/btnGuardarRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/edit"
        android:text="@string/registrarse"
        android:textColor="@color/black"
        app:cornerRadius="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPassRegisterLayout"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etCorreoRegisterLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toTopOf="@+id/etPassRegisterLayout"
        app:layout_constraintEnd_toEndOf="@+id/etPassRegisterLayout"
        app:layout_constraintStart_toStartOf="@+id/etPassRegisterLayout"
        app:layout_constraintTop_toBottomOf="@+id/etFechaNacRegisterLayout"
        app:layout_constraintVertical_bias="0.5">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etCorreoRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/correo_electr_nico"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- TextInputLayout para Contraseña -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etPassRegisterLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btnGuardarRegistro"
        app:layout_constraintTop_toBottomOf="@+id/etCorreoRegisterLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/contrase_a"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- TextInputLayout para Fecha de Nacimiento -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etFechaNacRegisterLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toTopOf="@+id/etCorreoRegisterLayout"
        app:layout_constraintEnd_toEndOf="@+id/etCorreoRegisterLayout"
        app:layout_constraintStart_toStartOf="@+id/etCorreoRegisterLayout"
        app:layout_constraintTop_toBottomOf="@+id/etApellidosRegisterLayout"
        app:layout_constraintVertical_bias="0.5">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etFechaNacRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:ems="10"
            android:focusable="false"
            android:hint="@string/fecha_de_nacimiento"
            android:inputType="date" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
